# dingo_test_runner

./: .cursorignore  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  EMAIL_USAGE.md  ERROR_HANDLING_IMPROVEMENTS.md  EXEC_IMPLEMENTATION.md  FEATURE_SUMMARY.md  INTEGRATION_TEST_PLAN.md  Makefile  PARALLEL_EXECUTION.md  QUICKSTART.md  README.md  SOURCE_IMPLEMENTATION.md  TAG_TESTS_SUMMARY.md  TESTING_COMMANDS.md  VARIABLE_IMPLEMENTATION.md  batch_report.xml  debug_multiline.test  demo_report.xml  docker-compose.test.yml  my_first_test.sql  mysql  mysql-test-runner_beckground.md  perf_parse_only.sh  perf_test.sh  performance_analysis.md  reorganize_tests.sh  run_categorized_tests.sh  run_tag_tests.sh  test  test_report.xml  test_security_fix.xml
.claude/: settings.local.json
.cursor/rules/: codingrules.mdc
.github/workflows/: build-macos.yml  ci.yml  pr-check.yml
benches/: memory_pool_benchmark.rs
examples/: README.md  concurrent_error_handling.test  connection_multi.test  error_handling.test  exec_replace_regex.test  variable_basic.test  variable_expression.test
integration_tests/: README.md
integration_tests/scripts/: cleanup.sh  setup_env.sh
integration_tests/smoke/: enhanced_smoke_test_report.txt  run_smoke.sh  smoke_test_report.txt
performance/: README.md
performance/scripts/: generate_flamegraph.sh  run_perf_analysis.sh  setup_baselines.sh
r/: 02_basic_variables.smoke  03_basic_sql.smoke  04_control_flow.smoke  07_joins_and_subqueries.smoke  08_error_handling.smoke  09_data_types.smoke  11_while_loops.smoke  12_advanced_variables.smoke  connection_sqlite.result  create_tables_loop.result  db_isolation_2.result  debug_multiline.test.dev  example.result  mysql_connect.result  nested_control_flow.result  parser_edge_cases.result  simple_inc_test.result  simple_nested.result  source_depth.result  source_nested.result  tags_advanced_scenarios.dev  tags_basic_features.dev  tags_concurrent_scenarios.dev  tags_edge_cases.dev  tags_integration_test.dev  tags_performance_test.dev  tags_simple_integration.dev  tags_test.dev  test_line_numbers.result  test_parallel_1.result  test_parallel_3.result  variable_sql_simple.result  while_brace_syntax.result  while_loop_debug.result
r/br/: br.result  br.tmp.result  br_mul_index.result  br_mul_index_query.result  br_query.result
r/ddl/: t1.result  visible.result
r/demo_tests/: concurrent_advanced.result  concurrent_basic.result  concurrent_error_handling.result  (+16 more)
r_for_test/: echo_test.result  variable_simple.result
spec/: 产品目标.md
src/: cli.rs  lib.rs  loader.rs  main.rs
t/: connection_sqlite.test  control_flow_demo.test  create_tables_loop.test  db_isolation_1.test  db_isolation_2.test  dev_test.test  drop_tables_loop.test  enhanced_syntax_test.test  error_test.test  example.test  fail_fast_no_result_test.test  if_brace_syntax.test  if_simple.test  mysql_connect.test  nested_control_flow.test  parallel_test_1.test  parser_edge_cases.test  regex_test.test  simple_nested.test  source_basic.test  source_depth.test  test_parallel_1.test  test_parallel_3.test  var_ops_test.test  while_brace_syntax.test  while_simple.test
t_for_test/: README.md  verify_migration.sh
templates/: report.html
tests/: concurrent_block_test.rs  debug_pest.rs  exec_integration_test.rs  integration_test.rs  pest_integration_test.rs  result_mismatch_test.rs
(+199 files in other folders)
