[package]
name = "dingo_test_runner"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "dingo_test_runner"
path = "src/main.rs"

[lib]
name = "dingo_test_runner"
path = "src/lib.rs"

[dependencies]
# MySQL 驱动
mysql = "24.0"

# CLI 解析
clap = { version = "4.0", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
env_logger = "0.10"

# 正则表达式
regex = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 并发
rayon = "1.7"
crossbeam = "0.8"

# 邮件功能 (暂时保留依赖，但功能未实现)
lettre = { version = "0.11", optional = true }
# 字符串映射
phf = { version = "0.11.2", features = ["macros"] }

# 目录遍历
walkdir = "2.5.0"
once_cell = "1.21.3"
[features]
default = []
email = ["lettre"]

