[package]
name = "dingo_test_runner"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "dingo_test_runner"
path = "src/main.rs"

[lib]
name = "dingo_test_runner"
path = "src/lib.rs"

[dependencies]
# MySQL 驱动
mysql = "26.0.0"

# CLI 解析
clap = { version = "4.0", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0.12"

# 日志
log = "0.4"
env_logger = "0.11"

# 正则表达式
regex = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 并发
rayon = "1.7"
crossbeam = "0.8"

# XML 生成 (用于 JUnit 报告)
quick-xml = "0.37.5"

# 终端检测和彩色输出
console = "0.15"

# 邮件功能
lettre = { version = "0.11", optional = true }
# HTML 模板引擎
askama = { version = "0.14.0", optional = true }
# 字符串映射
phf = { version = "0.11.2", features = ["macros"] }

# 目录遍历
walkdir = "2.5.0"
once_cell = "1.21.3"

# 表达式求值
evalexpr = "12.0.2"

# UUID 生成 (用于 Allure 报告)
uuid = { version = "1.0", features = ["v4"] }

# Pest parser (可选)
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["pest", "email"]
email = ["lettre", "askama"]
pest = ["dep:pest", "dep:pest_derive"]

